--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="scrip.js" defer></script>
   </head>
   <body>
-    <script src="scrip.js"></script>
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>    
+    <div class="outcome">      
+    </div>
   </body>
 </html>
