--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <script src="scrip.js" defer></script>
   </head>
   <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>    
+    <div class = "conteiner">
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button> 
+    </div>
     <div class="outcome">      
     </div>
   </body>
